--- a/5.adding_bootstrap/core/templates/core/index.html
+++ b/5.adding_bootstrap/core/templates/core/index.html
@@ -13,6 +13,6 @@
 
     <script src="{% static "core/js/jquery.js" %}"></script>
     <script src="{% static "core/js/popper.js" %}"></script>
-    <script src="{% static "core/js/bo0tstrap.min.js" %}"></script>
+    <script src="{% static "core/js/bootstrap.min.js" %}"></script>
 </body>
 </html>
