--- a/MenzoClothing/core/templates/core/products.html
+++ b/MenzoClothing/core/templates/core/products.html
@@ -2,7 +2,7 @@
 {% extends "core/base.html" %}
 
 {% load static %}
-{% block title %}men product{% endblock title %}
+{% block title %}Mens product{% endblock title %}
 
 {% block content %}
 
