--- a/MenzoClothing/core/templates/core/base.html
+++ b/MenzoClothing/core/templates/core/base.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MenzoClothing</title>
+    <title>MenzoClothing|{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static "core/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static 'core/css/main.css' %}">
 </head>
