--- a/MenzoClothing/core/templates/core/navbar.html
+++ b/MenzoClothing/core/templates/core/navbar.html
@@ -1,8 +1,9 @@
+{% load static %}
 <section id="header">
     <nav class="navbar navbar-expand-lg bg-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="static/core/images/menzoclothing2.png" class="img-fluid" style="height: 40px;">
+            <a class="navbar-brand" href="{% url "home" %}">
+                <img src="{% static "core/images/menzoclothing2.png" %}" class="img-fluid" style="height: 40px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,13 +12,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                    <a class="nav-link" href="{% url "home" %}">Home</a>
                     <a class="nav-link" href="{% url "about" %}">About</a>
                     <a class="nav-link" href="{% url "products" %}">Mens</a>
                     <a class="nav-link" href="{% url "contact" %}">Contact</a> 
-                    <a class="nav-link" href="{% url "contact" %}">Singup</a>
-                    <a class="nav-link" href="{% url "contact" %}">Login</a>
-                    <a class="nav-link" href="{% url "contact" %}">Logout</a>
+                    {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url "profile" %}">Welcome {{request.user.first_name}}<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url "logout" %}">Logout</a>
+                    {% else %}
+                    <a class="nav-link" href="{% url "registration" %}">Registration</a>
+                    <a class="nav-link" href="{% url "login" %}">Login</a>
+                    {% endif %}
+                    <a class="nav-link active" aria-current="page" href="{% url "profile" %}">Profile</a>
                    
                 </div>
             </div>
