--- a/MenzoClothing/core/templates/core/base.html
+++ b/MenzoClothing/core/templates/core/base.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MenzoClothing|{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static "core/css/bootstrap.min.css" %}">
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="{% static 'core/css/main.css' %}">
 </head>
 <body>
