--- a/MenzoClothing/core/templates/core/featurette.html
+++ b/MenzoClothing/core/templates/core/featurette.html
@@ -19,5 +19,39 @@
 
     <hr class="featurette-divider">
 
-   
-    
+    <!-- Cat featurette-->
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Symbol Of Mystery</h2>
+        <p class="lead">Cats are known for their independent nature. They often groom themselves, and some may prefer solitude.
+            They are territorial animals and may mark their territory with scent glands on their face.Cats communicate through vocalizations (meowing, purring), body language (tail movements, ear positions), and scent marking.
+            Purring is often associated with contentment, but cats may also purr when stressed or in pain.Cats are generally clean animals and groom themselves by licking their fur.
+            Regular veterinary care, vaccinations, and dental care are important for their overall health.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="static/core/images/cat/cat_feature.jpg" data-holder-rendered="true">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- Bird featurette-->
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Symbol Of Freedom</h2>
+        <p class="lead">Birds have beaks adapted to their feeding habits, including diverse shapes for catching prey, probing for insects, or cracking seeds.
+            Their body structures are adapted for specific environments, enabling them to thrive in various ecosystems.
+            Birds lay eggs, typically with hard shells, and engage in diverse reproductive behaviors.
+            Parental care varies among species, with some birds exhibiting elaborate courtship rituals and others providing extensive care for their chick.Many birds are known for their songs, which are used for communication, territory marking, and attracting mates.
+            Vocalizations vary widely among species, from the melodic songs of songbirds to the complex mimicry of parrots.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="static/core/images/bird/bird_feature.jpg" data-holder-rendered="true">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- /END THE FEATURETTES -->
+
+  </div>
