--- a/MenzoClothing/core/templates/core/imagecard.html
+++ b/MenzoClothing/core/templates/core/imagecard.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 x">    <!-- mt-4 stand for top margin from o-5 value -->
-    <h1>Pet Categories </h1>
+    <h1>Mens Categories </h1>
 </div>
     <div class="container mt-4">
         <div class="card-deck">
