--- a/MenzoClothing/core/templates/core/product_details.html
+++ b/MenzoClothing/core/templates/core/product_details.html
@@ -23,7 +23,7 @@
                     <button>L</button>
                     <button>XL</button>
                 </div>
-                <button class="add-to-cart">Add to Cart</button>
+                <a href="{% url "addtocart" dc.id %}"><button class="add-to-cart">Add to Cart</button></a>
                 <button class="add-to-cart">Buy Now</button>
 
                 <div class="product-details12">
