--- a/MenzoClothing/core/static/core/css/main.css
+++ b/MenzoClothing/core/static/core/css/main.css
@@ -326,3 +326,148 @@
         width: auto;
     }
 }
+
+
+/* ======== Product Cart Page CSS ========== */
+
+.cart-container {
+    display: flex;
+    width: 90%;
+    height: 90%;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.cart {
+    flex: 3;
+    padding: 20px;
+}
+
+.cart h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.cart-items {
+    margin-top: 20px;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+.cart-item img {
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.item-details {
+    flex: 1;
+}
+
+.product-name {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.product-desc {
+    font-size: 14px;
+    color: gray;
+}
+
+.quantity {
+    display: flex;
+    align-items: center;
+}
+
+.quantity button {
+    background: #ddd;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.quantity input {
+    width: 30px;
+    text-align: center;
+    border: none;
+    font-size: 16px;
+    margin: 0 5px;
+}
+
+.price {
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.remove-item {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: rgb(101, 97, 97);
+}
+
+.back-to-shop {
+    display: block;
+    margin-top: 20px;
+    color: rgb(54, 54, 56);
+    text-decoration: none;
+}
+
+.summary {
+    flex: 2;
+    padding: 20px;
+    background:  #f9eedd;
+    border-radius: 10px;
+}
+
+.summary h3 {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.summary-details p {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+.summary-details select,
+.summary-details input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid #545252;
+    border-radius: 3px;
+    
+}
+
+.checkout-btn {
+    width: 100%;
+    background: black;
+    color: white;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.checkout-btn:hover {
+    background: darkgray;
+}
+
+/* ======== Product End Cart Page CSS ========== */
