--- a/MenzoClothing/core/templates/core/address.html
+++ b/MenzoClothing/core/templates/core/address.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "viewcart" %}">
+                    <a class="nav-link" href="{% url "viewcart"  %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                     Cart
                     </a>
@@ -42,36 +42,54 @@
             </nav>
         </div>    
         <div class="col-md-8">
-            <div class="container profile-form">
-                 <div class="reg ">
-                    <h3 class="text-primary">Profile</h3>
-                </div>
-                <form action="" method="POST" novalidate>
-        {% csrf_token %}
-
-        {% if mf.non_field_errors %}
-            {% for error in mf.non_field_errors %}
-                {{error}}
-            {% endfor %}
-        {% endif %}
-
-        {% for m in mf%}
-        <div class="form-group mr-4 ml-4 ">
-            {{m.label_tag}} {{m}} {{m.errors}}
-        </div> 
-        {% endfor %}
-        <div class="text-center">
-        <input type="submit" value="Save" class="btn btn-success register-button">
-        </div>
-    </form>
-    </div>
-        <br>
-            {% if messages %}
-                {% for message in messages %}
-                    <span {% if message.tags %} class="alert alert-{{message.tags}}" {% endif %}>{{message}}</span>
-                {% endfor %}
-            {% endif %}
-
+                <div class="container">
+                    <div class="row">
+                            <div class="col-sm-5">
+                    {% comment %} <section class="h-100" style="background-color: #eee;"> {% endcomment %}
+                        <div class="container profile-form">
+                            <div class="reg ">
+                                <h3 class="text-primary">Profile</h3>
+                            </div>
+                            <form action="" method="POST" novalidate>
+                                {% csrf_token %}
+                                {% for f in mf %}
+                                <div class="form-group mr-4 ml-4 ">
+                                    {{f.label_tag}} {{f}} {{f.errors}}
+                                </div>
+                                {% endfor %}
+                                <div class="text-center">
+                                    <input type="submit" value="Save" class="btn btn-success register-button">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                     <div class="col-sm-6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    {% for add in address %}
+                                    <div class="card flex-md-row mb-4 box-shadow h-md-250 mt-4 ml-4">
+                                        <div class="card-body d-flex flex-column align-items-start">
+                                            <h3 class="mb-0">
+                                            Name: {{add.name}}
+                                        </h3>
+                                        <p class="card-text mb-auto">Address:{{add.address}} </p>
+                                        <p class="card-text mb-auto">City:{{add.city}} </p>
+                                        <p class="card-text mb-auto">State: {{add.state}} </p>
+                                        <p class="card-text mb-auto">Pincode:{{add.pincode}} </p>
+                                        <a href="{% url "deleteaddress" add.id %}">
+                                            <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                            <input type="submit" class="btn btn-danger btn-sm mt-2" value="Delete Address">
+                                            </div>
+                                        </a>   
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>        
             </div>
         </div>
       </div>
