--- a/MenzoClothing/core/templates/core/cart.html
+++ b/MenzoClothing/core/templates/core/cart.html
@@ -79,7 +79,9 @@
                         
                         <p class="total">TOTAL PRICE <span>₹<b>{{final_price}}</span></p>
                     </div>
+                    <a href="{% url "checkout" %}">
                     <button class="checkout-btn">CHECKOUT</button>
+                    </a>
                 </div>
             </div>
         
