--- a/MenzoClothing/core/templates/core/checkout.html
+++ b/MenzoClothing/core/templates/core/checkout.html
@@ -5,59 +5,22 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 mt-5">
-            <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 mt-5">
-                            <div class="card ">
-                                <div class="card-header">
-                                    <h3 class="text-xs-center"><strong>Order summary</strong></h3>
-                                </div>
-                                <div class="card-block">
-                                    <div class="table-responsive">
-                                        <table class="table table-sm">
-                                            <thead>
-                                                <tr>
-                                                    <td><strong>Pet Name</strong></td>
-                                                    <td class="text-xs-center"><strong>Pet Price</strong></td>
-                                                    <td class="text-xs-center"><strong>Pet Quantity</strong></td>
-                                                    <td class="text-xs-right"><strong>Total</strong></td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                {% for item in cart_items %}
-                                                <tr>
-                                                    <td>{{item.product.name}}</td>
-                                                    <td class="text-xs-center">₹{{item.product.discounted_price}}</td>
-                                                    <td class="text-xs-center">{{item.quantity}}</td>
-                                                    <td class="text-xs-right">₹{{item.product.price_and_quantity_total}}</td>
-                                                </tr>
-                                                {% endfor %}
-                                                <tr>
-                                                    <td class="highrow"></td>
-                                                    <td class="highrow"></td>
-                                                    <td class="highrow text-xs-center"><strong>Subtotal</strong></td>
-                                                    <td class="highrow text-xs-right">₹<b>{{total}}</b></td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="emptyrow"></td>
-                                                    <td class="emptyrow"></td>
-                                                    <td class="emptyrow text-xs-center"><strong>Shipping</strong></td>
-                                                    <td class="emptyrow text-xs-right">₹2000</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="emptyrow"><i class="fa fa-barcode iconbig"></i></td>
-                                                    <td class="emptyrow"></td>
-                                                    <td class="emptyrow text-xs-center"><strong>Total</strong></td>
-                                                    <td class="emptyrow text-xs-right">₹<b>{{final_price}}</b></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="summary">
+                <h3>Summary</h3>
+                <div class="summary-details">
+                    <p>ITEMS <span> ₹{{total}}</span></p>
+                    
+                    
+                    <p class="total">SubTotal <span>₹{{total}}</span></p>
+                    <p class="total">Shipping <span>₹1000</span></p>
+                    
+                    <p class="total">TOTAL PRICE <span>₹<b>{{final_price}}</span></p>
                 </div>
+                <a href="{% url "checkout" %}">
+                <button class="checkout-btn">Proccess To Pay</button>
+                </a>
+            </div>
+       
         </div>
         <div class="col-sm-5 mt-5">
                 <div class="container">
