--- a/MenzoClothing/core/templates/core/checkout.html
+++ b/MenzoClothing/core/templates/core/checkout.html
@@ -111,4 +111,12 @@
     </div>
 </div>
 
+
+<!--================================= Payment Start Here==============================================-->
+<div class="row">
+  {{paypal.render}}
+</div>
+</div>
+
+
 {% endblock content %}
