--- a/MenzoClothing/core/templates/core/login.html
+++ b/MenzoClothing/core/templates/core/login.html
@@ -24,6 +24,7 @@
         <input type="submit" value="Login" class="btn btn-success register-button">
         </div>
     </form>
+    <a href="{% url "forgotpassword" %}" class="text-center ">forgotpassword?</a>
 </div>
 <br>
     {% if messages %}
