--- a/MenzoClothing/core/templates/core/imagecard.html
+++ b/MenzoClothing/core/templates/core/imagecard.html
@@ -1,19 +1,43 @@
-<div class="container mt-5 x">    <!-- mt-4 stand for top margin from o-5 value -->
-    <h1>Mens Categories </h1>
-</div>
-    <div class="container mt-4">
-        <div class="card-deck">
-          <!-- Dog card start-->
-          <a href="{% url "products" %}" class = "card-img-href" style="text-decoration: none; ">
-            <div class="card ml-5 mt-5 mb-5" style="width: 18rem;">
-                <img class="card-img-top" src="static/core/images/6870101.jpg" alt="Card image cap">
-                <div class="card-body" style= "">
-                  <p class="card-text">Dogs are loyal, domesticated mammals known for companionship.</p>
-                </div>
-              </div>
-            </a>
-        
-      
-          
+
+</head>
+<body>
+  <div class="imagescard">
+    
+        <div class="description">
+            <p>
+                Nullam aliquet vestibulum augue non varius. Cras nec congue elit. 
+                Donec tristique vel ante nec aliquam. Praesent urna tellus, 
+                laoreet vel tellus ullamcorper, fermentum facilisis est.
+                Suspendisse tellus erat, sagittis vel lorem non, posuere tincidunt nulla.
+            </p>
         </div>
-    </div>
+
+        <div class="grid">
+            <img src="static/core/images/shoes.jpg" alt="Product 1" class="small">
+            <img src="static/core/images/tie.jpg" alt="Product 2" class="small">
+            <img src="static/core/images/belt.jpg" alt="Product 3" class="small">
+            <img src="static/core/images/button.jpg" alt="Product 4" class="small">
+            <img src="static/core/images/fullout.jpg" alt="Product 5" class="large">
+        </div>
+
+        <div class="info-section">
+            <div class="info-box">
+                <h4>FREE DELIVERY WORLDWIDE</h4>
+                <p>No minimum purchase</p>
+                <a href="#">→</a>
+            </div>
+            <div class="info-box">
+                <h4>FREE RETURNS IN-STORE</h4>
+                <p>Find out how</p>
+                <a href="#">→</a>
+            </div>
+            <div class="info-box">
+                <h4>SECURE SHOPPING GUARANTEE</h4>
+                <p>Learn more</p>
+                <a href="#">→</a>
+            </div>
+        </div>
+    
+  </div>
+</body>
+</html>
