--- a/MenzoClothing/core/static/core/css/main.css
+++ b/MenzoClothing/core/static/core/css/main.css
@@ -2,6 +2,12 @@
 
 body{
     margin-top: 100px;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+    color: #333;
+    
 }
 /* Custom Background Color */
 .bg-custom {
@@ -472,3 +478,67 @@ body{
 }
 
 /* ======== Product End Cart Page CSS ========== */
+
+
+/* ----------------images card category--------------------------------------*/
+
+
+
+.imagescard {
+width: 90%;
+max-width: 1000px; /* Chhota kar diya */
+margin: 20px auto;
+padding: 100px;  /* Yeh 4 taraf padding dega */
+text-align: center;
+}
+
+.description {
+    margin-bottom: 30px;
+    line-height: 1.6;
+    color: #666;
+}
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+}
+.grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.small {
+    grid-column: span 1;
+    grid-row: span 1;
+}
+.large {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+.info-section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    padding-top: 20px;
+    border-top: 1px solid #ccc;
+}
+.info-box {
+    flex: 1;
+    padding: 0 15px;
+}
+.info-box h4 {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+}
+.info-box p {
+    font-size: 12px;
+    color: #999;
+}
+.info-box a {
+    text-decoration: none;
+    font-size: 12px;
+    color: #333;
+    font-weight: bold;
+}
