--- a/MenzoClothing/core/templates/core/about.html
+++ b/MenzoClothing/core/templates/core/about.html
@@ -8,9 +8,10 @@
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #ffffff;
+            background-color: #F8EBD9;
             color: #333;
         }
+    
         .about-section {
             display: flex;
             flex-direction: row;
