--- a/MenzoClothing/core/templates/core/navbar.html
+++ b/MenzoClothing/core/templates/core/navbar.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="{% url "products" %}">Mens</a>
                     <a class="nav-link" href="{% url "contact" %}">Contact</a> 
                     {% if request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url "profile" %}">Welcome {{request.user.first_name}}<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url "profile" %}">Welcome {{request.user.first_name}}</a>
                     <a class="nav-link" href="{% url "logout" %}">Logout</a>
                     {% else %}
                     <a class="nav-link" href="{% url "registration" %}">Registration</a>
